less verbose to list method